# GCTA

./: .gitignore  BUILD_IMPROVEMENTS.md  CHANGELOG_BUILD_SYSTEM.md  CMakeLists.txt  Hutch.md  README.md
include/: AsyncBuffer.hpp  FastFAM.h  GRM.h  Geno.h  GenoBackend.h  GenoBackendFactory.h  LD.h  Logger.h  MLMA.h  MLMA_loco.h  MLMA_stream_common.hpp  Marker.h  Matrix.hpp  Pheno.h  RemlCtx.hpp  RemlEngine.hpp  RemlState.hpp  StatLib.h  acat.hpp  constants.hpp  cpu.h  cpu_f77blas.h  grm_binary_io.hpp  mem.hpp  mlma_woodbury.hpp  utils.hpp
main/: CommFunc.cpp  CommFunc.h  LinAlg.cpp  StatFunc.cpp  StatFunc.h  StrFunc.cpp  StrFunc.h  bivar_reml.cpp  data.cpp  edata.cpp  eigen_func.cpp  eigen_func.h  ejma.cpp  est_hsq.cpp  gbat.cpp  gcta.h  grm.cpp  gsmr.cpp  gwas_simu.cpp  joint_meta.cpp  ld.cpp  mbat.cpp  mkl.cpp  mlm_assoc.cpp  mtcojo.cpp  option.cpp  pc_adjust.cpp  popu_genet.cpp  raw_geno.cpp  reml_within_family.cpp  sbat.cpp
src/: BedBackend.cpp  BgenBackend.cpp  Covar.cpp  FastFAM.cpp  GRM.cpp  Geno.cpp  LD.cpp  Logger.cpp  MLMA_loco.cpp  MLMA_stream.cpp  Marker.cpp  PgenBackend.cpp  Pheno.cpp  RemlEngine.cpp  StatLib.cpp  VcfBackend.cpp  acat.cpp  main.cpp  mem.cpp  utils.cpp
tests/: run_tests.py
